# arm_robot

./: README.md  pyproject.toml
data/: eight_trajectory.npy  trajectory.npy
firmware/: CMakeLists.txt
firmware/components/acs712/: acs712.c  acs712_filtered.c
firmware/components/acs712/include/: acs712.h
firmware/components/arm_robot/: CMakeLists.txt  arm_robot.c
firmware/components/arm_robot/include/: arm_robot.h
firmware/components/i2c/: i2c.c
firmware/components/i2c/include/: i2c.h
firmware/components/pca9685/: pca9685.c
firmware/components/pca9685/include/: pca9685.h
firmware/components/servo_pca9685/: servo_pca9685.c
firmware/components/servo_pca9685/include/: servo_pca9685.h
firmware/main/: CMakeLists.txt  app_main.c
tools/: logger_config.json
tools/example/: use_jtraj.py
tools/figure/: __init__.py  eight.py
tools/model/: __init__.py  robot.py
tools/model/urdf/: robot.urdf
tools/script/: move.py
tools/tests/: test_device.py
tools/trajectory/: INFO.md  trajectory_1.py  trajectory_eight.py
tools/utils/: __init__.py  device.py  logger.py
